# yuma123

./: Makefile.am  configure.ac  install
example-modules/i2rs/: Makefile  Makefile.am  Makefile.in  Socket.c  Socket.h  com.c  com.h  i2rs.2c  i2rs.c  ietf-i2rs-rib.c  ietf-i2rs-rib.h  ietf-i2rs-rib.yang  libi2rs.la  libi2rs_la-i2rs.lo  util.c
example-modules/i2rs/.deps/: libi2rs_la-i2rs.Plo
example-modules/i2rs/.libs/: libi2rs.la  libi2rs.lai  libi2rs.so.0  libi2rs.so.0.0.0  libi2rs.so.0.0.0T
example-modules/i2rs/NONE/share/yuma/modules/examples/: i2rs.yang
